Closed Bug 258079 Opened 20 years ago Closed 20 years ago

[FIXr]cssText broken for play-during property

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla1.8alpha4

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(2 files)

The problem is that we don't translate the flags into CSS right except in
GetValue()...

Perhaps the answer is to convert play-during back into a shorthand (undoing part
of the bug 208729 patch) and fix the shorthand code in cssText to deal with it?
Priority: -- → P3
Target Milestone: --- → mozilla1.8alpha4
(or we could just nuke play-during altogether -- it's not in CSS3 Speech.)
Really?  In that case I believe eliminating it is the way to go.
Seems like it, at any rate: http://www.w3.org/TR/css3-speech/
Looking over the CSS3 stuff, it looks like the CSS2 "aural" module got split
into CSS3 Speech (which sorta exists) and CSS3 Audio (which is just a twinkle in
the eye).

'play-during' would fall into the latter module, if it were to exist.

David, are you ok with me just removing this property?
OK, I think removing the property it is.
Comment on attachment 160247 [details] [diff] [review]
Remove play-during

David, thoughts?
Attachment #160247 - Flags: superreview?(dbaron)
Attachment #160247 - Flags: review?(dbaron)
Summary: cssText broken for play-during property → [FIX]cssText broken for play-during property
Attachment #160247 - Flags: superreview?(dbaron)
Attachment #160247 - Flags: superreview+
Attachment #160247 - Flags: review?(dbaron)
Attachment #160247 - Flags: review+
Summary: [FIX]cssText broken for play-during property → [FIXr]cssText broken for play-during property
Fixed on trunk.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Attachment #274417 - Flags: superreview?(bzbarsky)
Attachment #274417 - Flags: review?(bzbarsky)
Comment on attachment 274417 [details] [diff] [review]
one more line to remove

Good catch.  r+sr=bzbarsky
Attachment #274417 - Flags: superreview?(bzbarsky)
Attachment #274417 - Flags: superreview+
Attachment #274417 - Flags: review?(bzbarsky)
Attachment #274417 - Flags: review+
Comment on attachment 274417 [details] [diff] [review]
one more line to remove

This removes a member variable that should have been remove in the patch above.  Very low risk.
Attachment #274417 - Flags: approval1.9?
Above patch checked in to trunk.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: