Remove parsing of play-during property, since we don't support it anyway and it's gone from CSS2.1 and CSS3.  Bug 258079, r+sr=dbaron